more properties added in tenant websites table + fixes in ecommerce smart theme Imported from Changeset 2493

--- a/WMS/Views/Theme/Default/WebsiteContentPages/Details.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteContentPages/Details.cshtml
@@ -43,11 +43,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Contant)
+            @Html.DisplayNameFor(model => model.Content)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Contant)
+            @Html.DisplayFor(model => model.Content)
         </dd>
 
         <dt>
