--- a/WMS/Views/Theme/Default/WebsiteContentPages/Create.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteContentPages/Create.cshtml
@@ -53,10 +53,10 @@
         </div>
 
         <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.LabelFor(model => model.Contant, htmlAttributes: new { @class = "control-label col-md-4" })
+            @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-4" })
             <div class="col-md-8">
                 @Html.Partial("~/Views/Theme/Default/DevexHelper/PlaceholdersHtmlEditorPartial.cshtml", new HtmlEditorModel() { HtmlContent = Model.Contant, EditorName = "Contant", CallbackController = "DevexHelper", CallbackAction = "HtmlEditorWebsiteContentEditorPartial", Height = 200 })
-                @Html.ValidationMessageFor(model => model.Contant, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
             </div>
         </div>
 
