--- a/WMS/Views/Theme/Default/WebsiteContentPages/Delete.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteContentPages/Delete.cshtml
@@ -44,11 +44,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Contant)
+            @Html.DisplayNameFor(model => model.Content)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Contant)
+            @Html.DisplayFor(model => model.Content)
         </dd>
 
         <dt>
